implementation of gradient descent

--- a/gradient_descent.ipynb
+++ b/gradient_descent.ipynb
@@ -99,7 +99,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore') \n",
     "\n",
-    "sales_df = pd.read_csv( 'Advertising.csv' ) \n",
+    "sales_df = pd.read_csv( 'datasets/Advertising.csv' ) \n",
     "\n",
     "# first few records\n",
     "sales_df.head()"
