--- a/Multi_layer_Perceptron_Credit_Dataset.ipynb
+++ b/Multi_layer_Perceptron_Credit_Dataset.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('credit_data.csv')"
+    "dataset = pd.read_csv('datasets/credit_data.csv')"
    ]
   },
   {
