recurrent neural network on time series

--- a/RNN_on_Time_Series.ipynb
+++ b/RNN_on_Time_Series.ipynb
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('Alcohol_Sales.csv',index_col=0,parse_dates=True)\n",
+    "df = pd.read_csv('datasets/Alcohol_Sales.csv',index_col=0,parse_dates=True)\n",
     "len(df)"
    ]
   },
