recurrent neural network on energy production data

--- a/RNN_on_Energy_Production.ipynb
+++ b/RNN_on_Energy_Production.ipynb
@@ -115,7 +115,7 @@
     "from pandas.plotting import register_matplotlib_converters\n",
     "register_matplotlib_converters()\n",
     "\n",
-    "df = pd.read_csv('Energy_Production.csv',index_col=0,parse_dates=True)\n",
+    "df = pd.read_csv('datasets/Energy_Production.csv',index_col=0,parse_dates=True)\n",
     "df.dropna(inplace=True)\n",
     "print(len(df))\n",
     "df.head()"
