loan prediction problem using neural network

--- a/Loan_Prediction_using_Neural_Network.ipynb
+++ b/Loan_Prediction_using_Neural_Network.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "# loading the pre-processed dataset\n",
-    "data = pd.read_csv('loan_prediction_data.csv')"
+    "data = pd.read_csv('datasets/loan_prediction_data.csv')"
    ]
   },
   {
