--- a/Pytorch_implementation_Iris_data.ipynb
+++ b/Pytorch_implementation_Iris_data.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"iris.csv\")"
+    "data = pd.read_csv(\"datasets/iris.csv\")"
    ]
   },
   {
