text generation by RNN

--- a/RNN_for_Text_Generation.ipynb
+++ b/RNN_for_Text_Generation.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('TomSawyer.txt','r',encoding='utf8') as f:\n",
+    "with open('datasets/TomSawyer.txt','r',encoding='utf8') as f:\n",
     "    text = f.read()"
    ]
   },
